[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["danlo <danlo12@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
